fix menu buttons on mobile

--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -86,7 +86,7 @@ ul.menu {
 }
 
 ul.menu li {
-    display: inline-block;
+    display: inline;
     font-weight: bold;
 }
 
@@ -96,6 +96,7 @@ ul.menu li.active a {
 }
 
 ul.menu li a {
+    display: inline-block;
     padding: 0.7em;
     text-decoration: none;
     color: #555;
